--- a/templates/base.html
+++ b/templates/base.html
@@ -95,6 +95,8 @@
 
     <!-- Main JS -->
     <script src="{% static 'assets/js/main.js' %}"></script>
+    <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+    
   </body>
 </body>
 </html>
