--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -2,36 +2,102 @@
 {% load static %}
 {% block content %}
 
-<!-- Main Wrapper Start -->
+<!-- Main Content Wrapper Start -->
 <div class="main-content-wrapper">
-  <div class="about-area bg--dark-3 mt--40 mt-sm--30">
-    <div class="container-fluid p-0">
-      <div class="row no-gutters align-items-center">
-        <div class="col-xl-6">
-          <div class="img-box text-center">
-            <img src="{% static 'assets/img/about/about-us-img1.jpg' %}" alt="about">
-          </div>
-        </div>
-        <div class="col-xl-6">
-          <div class="row">
-            <div class="col-10 offset-1">
-              <div class="about-text text-center">
-                <h2 class="heading-secondary mb--40 mb-sm--30">
-                  About Us
-                </h2>
-                <p class="mb--40 mb-sm--30">
-                  Un duo mama-fiica cu o dragoste aparte pentru piese vintage care rezista trecerii timpului. Fiecare piesa creata cu drag raspunde unei singure intrebari: noi am purta-o cu drag?</p>
-                <div class="about-btn-group text-center">
-                  <a href="/" class="btn btn-style-3">view our work</a>
+  <div class="single-products-area section-padding section-md-padding">
+    <div class="container">
+      <!-- Single Product Start -->
+      <section class="mirora-single-product pb--80 pb-md--60">
+        <div class="row">
+          <div class="col-lg-12 mb--30">
+            <div class="row gallery-row">
+              <div class="col-sm-6 mb--20">
+                <div class="product-details-gallery-img">
+                  <a class="popup-btn" href="assets/img/products/3-900x900.jpg">
+                    <img src="{% static 'assets/img/products/3-900x900.jpg' %}" alt="product">
+                  </a>
+                </div>
+              </div>
+
+              <div class="col-sm-6 mb--20">
+                <div class="product-details-gallery-img">
+                  <a class="popup-btn" href="assets/img/products/4-900x900.jpg">
+                    <img src="{% static 'assets/img/products/3-900x900.jpg' %}" alt="product">
+                  </a>
+                </div>
+              </div>
+
+              <div class="col-sm-6 mb--20">
+                <div class="product-details-gallery-img">
+                  <a class="popup-btn" href="assets/img/products/4-900x900.jpg">
+                    <img src="{% static 'assets/img/products/3-900x900.jpg' %}" alt="product">
+                  </a>
+                </div>
+              </div>
+
+              <div class="col-sm-6 mb--20">
+                <div class="product-details-gallery-img">
+                  <a class="popup-btn" href="assets/img/products/4-900x900.jpg">
+                    <img src="{% static 'assets/img/products/3-900x900.jpg' %}" alt="product">
+                  </a>
+                </div>
+              </div>
+
+              <div class="col-sm-6 mb--20">
+                <div class="product-details-gallery-img">
+                  <a class="popup-btn" href="assets/img/products/4-900x900.jpg">
+                    <img src="{% static 'assets/img/products/3-900x900.jpg' %}" alt="product">
+                  </a>
+                </div>
+              </div>
+
+              <div class="col-sm-6 mb--20">
+                <div class="product-details-gallery-img">
+                  <a class="popup-btn" href="assets/img/products/4-900x900.jpg">
+                    <img src="{% static 'assets/img/products/3-900x900.jpg' %}" alt="product">
+                  </a>
+                </div>
+              </div>
+
+              <div class="col-sm-6 mb--20">
+                <div class="product-details-gallery-img">
+                  <a class="popup-btn" href="assets/img/products/4-900x900.jpg">
+                    <img src="{% static 'assets/img/products/3-900x900.jpg' %}" alt="product">
+                  </a>
+                </div>
+              </div>
+
+              <div class="col-sm-6 mb--20">
+                <div class="product-details-gallery-img">
+                  <a class="popup-btn" href="assets/img/products/4-900x900.jpg">
+                    <img src="{% static 'assets/img/products/3-900x900.jpg' %}" alt="product">
+                  </a>
+                </div>
+              </div>
+
+              <div class="col-sm-6 mb-xsm--20">
+                <div class="product-details-gallery-img">
+                  <a class="popup-btn" href="assets/img/products/5-900x900.jpg">
+                    <img src="{% static 'assets/img/products/3-900x900.jpg' %}" alt="product">
+                  </a>
+                </div>
+              </div>
+              <div class="col-sm-6">
+                <div class="product-details-gallery-img">
+                  <a class="popup-btn" href="assets/img/products/6-900x900.jpg">
+                    <img src="{% static 'assets/img/products/3-900x900.jpg' %}" alt="product">
+                  </a>
                 </div>
               </div>
             </div>
           </div>
+
         </div>
-      </div>
+      </section>
+      <!-- Single Product End -->
     </div>
   </div>
 </div>
-<!-- Main Wrapper End -->
-
+<!-- Main Content Wrapper End -->
+<div class="elfsight-app-13803853-d82a-47d0-ba01-896dfddf5e9b"></div>
 {% endblock content %}
