--- a/templates/home.html
+++ b/templates/home.html
@@ -202,7 +202,8 @@
 <!-- Main Content Wrapper Start -->
 
 <!-- Scroll To Top Start -->
-<a class="scroll-to-top" href=""><i class="fa fa-angle-double-up"></i></a>
-<!-- Scroll To Top End -->
+
+
+<div class="elfsight-app-13803853-d82a-47d0-ba01-896dfddf5e9b"></div>
 
 {% endblock content %}
