--- a/templates/order_summary.html
+++ b/templates/order_summary.html
@@ -108,6 +108,6 @@
 
 <!-- Main content wrapper end -->
 
-
+<div class="elfsight-app-13803853-d82a-47d0-ba01-896dfddf5e9b"></div>
 
 {% endblock content %}
