--- a/templates/product.html
+++ b/templates/product.html
@@ -165,4 +165,6 @@
 </div>
 <!-- Main Content Wrapper End -->
 
+<div class="elfsight-app-13803853-d82a-47d0-ba01-896dfddf5e9b"></div>
+
 {% endblock content %}
