--- a/templates/home.html
+++ b/templates/home.html
@@ -16,6 +16,39 @@
         </div>
       </div>
       <!-- Single Slide End -->
+
+    </div>
+  </div>
+  <div class="col-xl-12">
+    <div class="row">
+      <div class="col-10 offset-1">
+        <div class="about-text text-center">
+          <h2 class="heading-secondary mb--40 mb-sm--30">
+            About Us
+          </h2>
+          <p class="mb--40 mb-sm--30">
+            Metanoia (n.) the journey of altering one’s ways, beliefs and spiritual path.
+            <br>
+ <br>
+            Bine ai venit in lumea Metanoia. O lume a lucrului frumos si facut din dragoste.
+            Mentalitatea Metanoia are la baza idea ca lucrurile cu adevarat de valoare vor fi mereu la moda: everything old is new again.
+            <br>
+ <br>
+            Ce ne defineste?
+            Source, recycle, love again
+            <br>
+ <br>
+            Cum functioneaza?
+            Echipa Metanoia cauta produse textile vintage care apartin celor mai mari case de moda din lume
+            Achizitionam esarfe si obiecte vestimentare de matase pentru a le oferi o a doua viata!
+            Cele mai speciale piese de material devin un accesoriu esential vremurilor pe care le traim
+            Piesele Metanoia sunt unicate, in cantitati limitate. Posted today, gone tomorrow!
+          </p>
+          <div class="about-btn-group text-center">
+            <a href="{% url 'core:gallery' %}" class="btn btn-style-3">view our work</a>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
