--- a/templates/home.html
+++ b/templates/home.html
@@ -24,20 +24,20 @@
       <div class="col-10 offset-1">
         <div class="about-text text-center">
           <h2 class="heading-secondary mb--40 mb-sm--30">
-            About Us
+            THE STORY OF METANOIA
           </h2>
           <p class="mb--40 mb-sm--30">
-            Metanoia (n.) the journey of altering one’s ways, beliefs and spiritual path.
+            <strong>Metanoia (n.) the journey of altering one’s ways, beliefs and spiritual path.</strong>
             <br>
- <br>
+            <br>
             Bine ai venit in lumea Metanoia. O lume a lucrului frumos si facut din dragoste.
             Mentalitatea Metanoia are la baza idea ca lucrurile cu adevarat de valoare vor fi mereu la moda: everything old is new again.
             <br>
- <br>
-            Ce ne defineste?
-            Source, recycle, love again
             <br>
- <br>
+            <strong>Ce ne defineste?
+            Source, recycle, love again</strong>
+            <br>
+            <br>
             Cum functioneaza?
             Echipa Metanoia cauta produse textile vintage care apartin celor mai mari case de moda din lume
             Achizitionam esarfe si obiecte vestimentare de matase pentru a le oferi o a doua viata!
