--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -106,7 +106,7 @@
                 <a href="{% url 'core:about' %}" class="mainmenu__link">About Us</a>
               </li>
               <li class="mainmenu__item">
-                <a href="{% url 'core:sellwithus' %}" class="mainmenu__link">Sell with Us</a>
+                <a href="{% url 'core:sellwithus' %}" class="mainmenu__link">Sell to Us</a>
               </li>
             </ul>
           </nav>
