--- a/templates/home.html
+++ b/templates/home.html
@@ -17,6 +17,42 @@
       </div>
       <!-- Single Slide End -->
 
+      <!-- Single Slide Start -->
+      <div class="single-slider content-v-center" style="background-image: {% static 'assets/img/banner/banner1.jpg' %}">
+        <div class="container">
+          <div class="row">
+            <div class="col-12">
+              <img src="{% static 'assets/img/banner/banner5.jpeg' %}" />
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Single Slide End -->
+
+      <!-- Single Slide Start -->
+      <div class="single-slider content-v-center" style="background-image: {% static 'assets/img/banner/banner1.jpg' %}">
+        <div class="container">
+          <div class="row">
+            <div class="col-12">
+              <img src="{% static 'assets/img/banner/banner5.jpeg' %}" />
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Single Slide End -->
+
+      <!-- Single Slide Start -->
+      <div class="single-slider content-v-center" style="background-image: {% static 'assets/img/banner/banner1.jpg' %}">
+        <div class="container">
+          <div class="row">
+            <div class="col-12">
+              <img src="{% static 'assets/img/banner/banner5.jpeg' %}" />
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Single Slide End -->
+
     </div>
   </div>
   <div class="col-xl-12">
