--- a/templates/product.html
+++ b/templates/product.html
@@ -123,6 +123,15 @@
                   {% endif %}
                 </div>
               </div>
+              <div class="product-details-bottom">
+                <div class="product-details-action-wrapper mb--20">
+                  <div class="product-details-action-top d-flex align-items-center mb--20">
+                    <p class="product-details-description">
+                      {{ object.description }}
+                    </p>
+                  </div>
+                </div>
+              </div>
 
               <div class="product-details-bottom">
                 <div class="product-details-action-wrapper mb--20">
@@ -140,26 +149,7 @@
       </section>
       <!-- Single Product End -->
 
-      <!-- Single Product Tab Start -->
-      <section class="product-details-tab bg--dark-4 ptb--80 ptb-md--60">
-        <div class="row">
-          <div class="col-12">
-            <ul class="product-details-tab-head nav nav-tab" id="singleProductTab" role="tablist">
-              <li class="nav-item product-details-tab-item">
-                <a class="nav-link product-details-tab-link active" id="nav-desc-tab" data-toggle="tab" href="#nav-desc" role="tab" aria-controls="nav-desc" aria-selected="true">Description</a>
-              </li>
-            </ul>
-            <div class="product-details-tab-content tab-content">
-              <div class="tab-pane fade show active" id="nav-desc" role="tabpanel" aria-labelledby="nav-desc-tab">
-                <p class="product-details-description">
-                  {{ object.description }}
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- Single Product Tab End -->
+
     </div>
   </div>
 </div>
