--- a/templates/footer.html
+++ b/templates/footer.html
@@ -7,7 +7,7 @@
           <h3 class="widget-title">How to find us?</h3>
           <div class="widget-content mb--20">
             <p>
-              Address: Undeva departe
+              Address: Calea Griviței 202, BUCUREȘTI
             </p>
             <p>Email: email@email.com</p>
           </div>
