--- a/templates/home.html
+++ b/templates/home.html
@@ -234,10 +234,12 @@
         <div class="col-xl-9 col-lg-10">
           <div class="newsletter text-center">
             <h3 class="color--white">Subscribe to Newsletter</h3>
-            <p>
-              Typi non habent claritatem insitam est usus legentis in qui facit
-              eorum claritatem, investigationes demonstraverunt lectores legere
-              me lius quod legunt saepius.
+            <p class="mb--40 mb-sm--30">
+              <strong>BE YOURSELF, BE UNIQUE!</strong>
+            </p>
+
+<p class="mb--40 mb-sm--30">
+              Măștile Metanoia sunt unice, fiind făcute din materiale vintage. Imprimeul poate avea o poziționare diferită fața de modelul pozat.
             </p>
 
             <form class="newsletter-form validate mt--40" action="http://devitems.us11.list-manage.com/subscribe/post?u=6bbb9b6f5827bd842d9640c82&id=05d85f18ef" method="post" id="mc-embedded-newsletter-form" name="mc-embedded-newsletter-form"
