--- a/templates/about.html
+++ b/templates/about.html
@@ -9,7 +9,7 @@
       <div class="row no-gutters align-items-center">
         <div class="col-xl-6">
           <div class="img-box text-center">
-            <img src="{% static 'assets/img/about/about-us-img1.jpg' %}" alt="about">
+            <img src="{% static 'assets/img/blog/pic1.JPG' %}" alt="about">
           </div>
         </div>
         <div class="col-xl-6">
@@ -22,7 +22,7 @@
                 <p class="mb--40 mb-sm--30">
                   Un duo mama-fiica cu o dragoste aparte pentru piese vintage care rezista trecerii timpului. Fiecare piesa creata cu drag raspunde unei singure intrebari: noi am purta-o cu drag?</p>
                 <div class="about-btn-group text-center">
-                  <a href="{% url 'core:gallery' %}" class="btn btn-style-3">view our work</a>
+                  <a href="{% url 'core:gallery' %}" class="btn btn-style-3">A PICTURE IS WORTH A THOUSAND WORDS</a>
                 </div>
               </div>
             </div>
