--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -1,6 +1,4 @@
-{% extends "base.html" %}
-{% load static %}
-{% block content %}
+{% extends "base.html" %} {% load static %} {% block content %}
 
 <!-- Main Content Wrapper Start -->
 <div class="main-content-wrapper">
@@ -13,85 +11,59 @@
             <div class="row gallery-row">
               <div class="col-sm-6 mb--20">
                 <div class="product-details-gallery-img">
-                  <a class="popup-btn" href="assets/img/products/3-900x900.jpg">
-                    <img src="{% static 'assets/img/products/3-900x900.jpg' %}" alt="product">
-                  </a>
+                  <img
+                    src="{% static 'assets/img/blog/pic2.JPG' %}"
+                    alt="product"
+                  />
                 </div>
               </div>
 
               <div class="col-sm-6 mb--20">
                 <div class="product-details-gallery-img">
-                  <a class="popup-btn" href="assets/img/products/4-900x900.jpg">
-                    <img src="{% static 'assets/img/products/3-900x900.jpg' %}" alt="product">
-                  </a>
+                  <img
+                    src="{% static 'assets/img/blog/pic3.JPG' %}"
+                    alt="product"
+                  />
                 </div>
               </div>
 
               <div class="col-sm-6 mb--20">
                 <div class="product-details-gallery-img">
-                  <a class="popup-btn" href="assets/img/products/4-900x900.jpg">
-                    <img src="{% static 'assets/img/products/3-900x900.jpg' %}" alt="product">
-                  </a>
+                  <img
+                    src="{% static 'assets/img/blog/pic4.JPG' %}"
+                    alt="product"
+                  />
                 </div>
               </div>
 
               <div class="col-sm-6 mb--20">
                 <div class="product-details-gallery-img">
-                  <a class="popup-btn" href="assets/img/products/4-900x900.jpg">
-                    <img src="{% static 'assets/img/products/3-900x900.jpg' %}" alt="product">
-                  </a>
+                  <img
+                    src="{% static 'assets/img/blog/pic5.JPG' %}"
+                    alt="product"
+                  />
                 </div>
               </div>
 
               <div class="col-sm-6 mb--20">
                 <div class="product-details-gallery-img">
-                  <a class="popup-btn" href="assets/img/products/4-900x900.jpg">
-                    <img src="{% static 'assets/img/products/3-900x900.jpg' %}" alt="product">
-                  </a>
+                  <img
+                    src="{% static 'assets/img/blog/pic6.JPG' %}"
+                    alt="product"
+                  />
                 </div>
               </div>
 
               <div class="col-sm-6 mb--20">
                 <div class="product-details-gallery-img">
-                  <a class="popup-btn" href="assets/img/products/4-900x900.jpg">
-                    <img src="{% static 'assets/img/products/3-900x900.jpg' %}" alt="product">
-                  </a>
-                </div>
-              </div>
-
-              <div class="col-sm-6 mb--20">
-                <div class="product-details-gallery-img">
-                  <a class="popup-btn" href="assets/img/products/4-900x900.jpg">
-                    <img src="{% static 'assets/img/products/3-900x900.jpg' %}" alt="product">
-                  </a>
-                </div>
-              </div>
-
-              <div class="col-sm-6 mb--20">
-                <div class="product-details-gallery-img">
-                  <a class="popup-btn" href="assets/img/products/4-900x900.jpg">
-                    <img src="{% static 'assets/img/products/3-900x900.jpg' %}" alt="product">
-                  </a>
-                </div>
-              </div>
-
-              <div class="col-sm-6 mb-xsm--20">
-                <div class="product-details-gallery-img">
-                  <a class="popup-btn" href="assets/img/products/5-900x900.jpg">
-                    <img src="{% static 'assets/img/products/3-900x900.jpg' %}" alt="product">
-                  </a>
-                </div>
-              </div>
-              <div class="col-sm-6">
-                <div class="product-details-gallery-img">
-                  <a class="popup-btn" href="assets/img/products/6-900x900.jpg">
-                    <img src="{% static 'assets/img/products/3-900x900.jpg' %}" alt="product">
-                  </a>
+                  <img
+                    src="{% static 'assets/img/blog/pic7.jpg' %}"
+                    alt="product"
+                  />
                 </div>
               </div>
             </div>
           </div>
-
         </div>
       </section>
       <!-- Single Product End -->
