--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -69,7 +69,7 @@
         </div>
         <div class="col-lg-2 col-12 order-lg-2 order-1 text-center">
           <a href="/" class="logo-box mb-md--30">
-            <img src="{% static 'assets/img/logo/logo2.jpeg' %}" alt="logo" />
+            <img src="{% static 'assets/img/logo/logo123.png' %}" alt="logo" />
           </a>
         </div>
         <div class="col-lg-5 col-md-7 col-sm-6 order-lg-3 order-3">
