--- a/static_in_env/assets/css/main.css
+++ b/static_in_env/assets/css/main.css
@@ -5402,8 +5402,8 @@ Form
 }
 
 .form__input {
-  background-color: #242424;
-  color: #afafaf;
+  background-color: #ffffff;
+  color: #000000;
   padding-left: 1.5rem;
   width: 100%;
   height: 4rem;
@@ -5412,7 +5412,7 @@ Form
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
   border-radius: 5px;
-  border: 1px solid transparent;
+  border: 1px solid ;
 }
 .form__input--2 {
   height: 4.5rem;
@@ -5532,14 +5532,14 @@ Form
 }
 
 .form .nice-select .nice-select-search-box {
-  background-color: #212121;
+  background-color: #ffffff;
 }
 .form .nice-select .nice-select-search-box input {
-  background-color: #242424;
+  background-color: #ffffff;
 }
 
 .form .nice-select .list {
-  background-color: #212121;
+  background-color: #ffffff;
 }
 
 .account-form {
