--- a/templates/about.html
+++ b/templates/about.html
@@ -19,9 +19,10 @@
                 <h2 class="heading-secondary mb--40 mb-sm--30">
                   About Us
                 </h2>
-                <p class="mb--40 mb-sm--30">
-                  Un duo mama-fiica cu o dragoste aparte pentru piese vintage care rezista trecerii timpului. Fiecare piesa creata cu drag raspunde unei singure intrebari: noi am purta-o cu drag?</p>
-                <div class="about-btn-group text-center">
+                <p class="mb--40 mb-sm--30">Metanoia (n.) the journey of altering one’s ways, beliefs and spiritual path.</p>
+                <p class="mb--40 mb-sm--30">Bine ai venit in lumea Metanoia. O lume a lucrului frumos si facut din dragoste. Mentalitatea Metanoia are la baza idea ca lucrurile cu adevarat de valoare vor fi mereu la moda: everything old is new again.</p>
+               <p class="mb--40 mb-sm--30"><strong>Cum functioneaza?</strong> <br> Echipa Metanoia cauta produse textile vintage care apartin celor mai mari case de moda din lume Achizitionam esarfe si obiecte vestimentare de matase pentru a le oferi o a doua viata! Cele mai speciale piese de material devin un accesoriu esential vremurilor pe care le traim. Piesele Metanoia sunt unicate, in cantitati limitate. Posted today, gone tomorrow!</p>
+               <div class="about-btn-group text-center">
                   <a href="{% url 'core:gallery' %}" class="btn btn-style-3">A PICTURE IS WORTH A THOUSAND WORDS</a>
                 </div>
               </div>
